# Calyxium

./: LICENSE  README.md  calyxium.opam  dune-project  go.mod  main.go  todo.txt
.github/workflows/: dune-single-platform.yml
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
_build/default/src/: ast.ml  ast.mli  calyxium.ml  lexer.ml  lexer.mll  parser.conflicts  parser.ml  parser.mli  parser__mock.ml.mock  parser__mock.mli.inferred
_build/default/src/.calyxium.eobjs/: dune__exe.ml-gen  dune__exe__Calyxium.impl.d  dune__exe__Calyxium.intf.d  dune__exe__Parser.impl.d  parser__mock.impl.d
_build/default/src/.calyxium.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  dune__exe__Ast.cmi  dune__exe__Ast.cmti  dune__exe__Calyxium.cmi  dune__exe__Calyxium.cmti  dune__exe__Lexer.cmi  dune__exe__Lexer.cmo  dune__exe__Lexer.cmt  dune__exe__Parser.cmi  dune__exe__Parser.cmti
_build/default/src/.calyxium.eobjs/native/: dune__exe.cmx  dune__exe__Ast.cmx  dune__exe__Calyxium.cmx  (+2 more)
_build/default/src/.formatted/: ast.ml  ast.mli
_build/default/src/.merlin-conf/: exe-calyxium
ast/: ast.go  expressions.go  statments.go  types.go
checker/: checker.go  checker_test.go
errors/: errors.go
examples/: LexTest.ptn  ParseTest.ptn  clac.cx  fib.cx  hello.cx  import.cx  main.cx  main.ptn  main.pu  test.ptn
grammer/: grammer.ebnf
helpers/: refelections.go
inc/: colorize.go
lexer/: lexer.go  maps.go  token.go
lib/: ast.ml  bytecode.ml  bytecode.mli  dune  interpreter.ml  interpreter.mli  lexer.mll  parser.mly  repl.ml  typechecker.ml  typechecker.mli
lib/bytecode/: bytecode.ml  bytecode.mli  dune
lib/interpreter/: dune  interpreter.mli
lib/repl/: dune  repl.ml  repl.mli
lib/semantics/: dune  typechecker.ml  typechecker.mli
lib/syntax/: ast.ml  ast.mli  dune  lexer.mll  parser.mly
lib/vm/: dune  vm.ml  vm.mli
parser/: expr.go  lookup.go  parser.go  parser_helpers.go  stmts.go  types.go
repl/: repl.go
src/: ast.ml  ast.mli  bytecode.ml  bytecode.mli  calyxium.ml  dune  interpreter.ml  lexer.mll  parser.mly  repl.ml  token.ml  token.mli  typechecker.ml
vm/: ast_lookup.go  run_vm.go  vm.go  vm_definitions.go
