(lang dune 3.14)
(using menhir 3.0)
(name Calyxium)
(version 0.0.1)
(license BSD 3-Clause)
(authors "Calyxium Foundation")
(maintainers "TheDevConnor Zombii Codezz-ops Iris")
(source (uri https://github.com/Calyxium/Calyxium))
(bug_reports "https://github.com/Calyxium/Calyxium/issues")
(homepage "https://calyxium.cc")
(documentation "https://calyxium.cc/docs")