(library
 (name calyxium)
 (modules ast bytecode interpreter lexer parser repl typechecker)
 (libraries ppx_deriving.show)
 (preprocess
  (pps ppx_deriving.show))
 (flags :standard)
 (modes native))

(ocamllex lexer)

(menhir
 (modules parser))

(documentation)

(env
 (dev
  (flags
   (:standard -w +a-4)))
 ; Removing Warnings for 'Compiler version'
 (release
  (flags
   (:standard -w -03))))
